[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roblox-test-runner"
version = "1.0.0"
description = "Execute Luau tests on Roblox Cloud"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "WildLink Team"}
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0"
]

[project.scripts]
roblox-test-runner = "roblox_test_runner.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]
